# python_crawler

./: README.md  lesson1.md  output.md  pyproject.toml
lesson2/: lesson2_1.ipynb  lesson2_1.py  lesson2_2.ipynb
lesson3/: lesson3_1.ipynb  lesson3_2.ipynb  lesson3_3.ipynb  lesson3_4.py  lesson3_5.ipynb  lesson3_6.py
lesson4/: lesson4_1.ipynb  lesson4_2.py  lesson4_3.py  lesson4_4.py  lesson4_5.py
lesson5/: lesson5_1.py  lesson5_2.py
lesson6/: lesson6_1.ipynb  lesson6_12.ipynb
lesson7/: lesson7_1.ipynb  lesson7_1.py  lesson7_3.py
lesson7_1/: main.py
lesson8/: main.py
lesson8_1/: lesson8_1_2.py  main.py  pyproject.toml
