[project]
name = "python_crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.7.7",
    "ipykernel>=7.1.0",
    "nest-asyncio>=1.6.0",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "streamlit>=1.28.0",
    "twstock>=1.4.0",
]

[tool.uv.workspace]
members = [
    "lesson8_1",
]
